Bug 1671907 - Properly recognize wasm constants that can be synthesized. r=jseward

When synthesizing constants we should be interested in type classes
(int vs float) and bit patterns in those classes, not specific tags --
a zero is a zero regardless of whether it is i8x16 or i32x4.

Thus the operator == on SimdConstant that takes type tags into account
is the wrong primitive to find out is a constant is synthesizable,
indeed, it is the wrong primitive in almost every case.  So get rid of
it, replace it with more suitable primitives, and use those
everywhere.

Add test cases that test that we are emitting the right instructions
for constants that are easy to synthesize.

Differential Revision: https://phabricator.services.mozilla.com/D94002